ingress/allow-uptime-kuma-to-ombi.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-uptime-kuma-to-ombi
  namespace: ombi
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: uptime-kuma
          podSelector:
            matchLabels:
              app: uptime-kuma
